fixing the page-3 bug : invsible icons solve: icon now visible

--- a/style.css
+++ b/style.css
@@ -1741,6 +1741,7 @@ input:checked + .slider:before {
     }
 
     .language-container {
+      opacity: 1;
       color: white;
       margin: 5% 0 10% 0%;
       display: flex;
@@ -1753,7 +1754,7 @@ input:checked + .slider:before {
       position: relative;
       border-radius: 50%;
       padding: 10px;
-      /* opacity: 1;    */
+      opacity: 1;   
       transform: scale(1);
     }
 
@@ -2435,45 +2436,6 @@ input:checked + .slider:before {
   }
 }
 
-/*  */
-
-/*  
-    .page-3 {
-      height: 100%;
-      max-width: 80%;
-      margin: 0 auto;
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      gap: 2rem;
-    }
-
-    .skills-section {
-      width: 50%;
-      color: white;
-    }
-
-    header h2 {
-      margin-top: 5%;
-      color: #fff;
-    }
-
-    .language-container {
-      color: white;
-      margin: 5% 0 10% 0%;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      cursor: pointer;
-    }
-
-    .language-container .lang {
-      position: relative;
-      border-radius: 50%;
-      padding: 10px;
-      /* opacity: 0; Animate in */
-      transform: scale(1);
-    }
 
     .language-container .lang:hover {
       background: linear-gradient(to right, #6365f177, #a955f783);
@@ -2525,4 +2487,4 @@ input:checked + .slider:before {
       align-items: center;
       opacity: 1; /* Animate in */
    
-    } */
+    } 
